# markeron

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY.md  README.md  README_zh.md  SECURITY.md  appxmanifest.xml  commitlint.config.js  index.html  package-lock.json  package.json  store-identity.json  tsconfig.json  vitest.config.ts
.cursor/rules/: commit-conventions.mdc  i18n.mdc  node-toolchain.mdc
.github/: FUNDING.yml  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
assets/store-screenshots/: scene0-hero-en.html  scene0-hero.html  scene1-desktop-en.html  scene2-tools-en.html  scene2-tools.html  scene3-panel-en.html  scene3-panel.html  scene4-shortcuts-en.html  scene4-shortcuts.html
docs/: CNAME  help.html  i18n.js  index.html  motion.css  motion.js  robots.txt  sitemap.xml  styles.css
packaging/homebrew/: markeron.rb
packaging/scoop/: README.md
packaging/winget/: README.md
promo/: analytics-baseline.md  article-en-tauri-markeron.md  article-zh-tauri-markeron.md  asset-guide.md  campaign-tracker.csv  distribution-checklist.md  launch-kit.md  seo-keywords.md
scripts/: build-msix.sh  build-portable.sh  check-lock-engines.mjs  check-node.mjs  consolidate-github-release.mjs  export-store-screenshots.mjs  merge-updater-json.mjs  merge-updater-json.test.mjs  release.mjs  sync-afdian-sponsors.mjs  sync-afdian-sponsors.test.mjs
src/: App.vue  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: clipboard.rs  commands.rs  config.rs  diagnostics.rs  error.rs  i18n.rs  lib.rs  linux_cursor.rs  macos.rs  macos_cursor.rs  monitor.rs  overlay.rs  portable.rs  shortcuts.rs  theme.rs  win32.rs
src/components/: DrawingOverlay.vue  SettingsPanel.vue  SettingsView.vue  TextBox.vue  ToolToolbar.vue  ToolbarWindow.vue
src/composables/: drawingGeometry.test.ts  drawingGeometry.ts  drawingRender.test.ts  drawingRender.ts  drawingTypes.ts  overlayBridge.ts  useAppTheme.test.ts  useAppTheme.ts  useDrawing.test.ts  useDrawing.ts  useOverlayKeyboard.test.ts  (+3 more)
(+49 files in other folders)
