[package]
name = "markeron"
version = "0.1.6"
description = "轻量级屏幕标注工具"
authors = ["ifer47"]
repository = "https://github.com/ifer47/markeron"
license = "MIT"
edition = "2021"

[lib]
name = "markeron_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2"
xcap = "0.9"
arboard = { version = "3", features = ["image-data"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
